--- a/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
@@ -21,8 +21,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">>
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
