--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PlatziConf" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PlatziConf" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        
+        <item name="android:windowFullscreen">false</item>
+        <item name="windowNoTitle">true</item>
+        
         <!-- Secondary brand color. -->
 
         <!-- Customize your theme here. --><!-- Status bar color. -->
