hasta clase de shapes

--- a/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
@@ -71,7 +71,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:background="@drawable/shape_parrafo">
 
                         <TextView
                             android:id="@+id/tvDetailConferenceHour"
@@ -97,14 +98,15 @@
 
                         <TextView
                             android:id="@+id/tvDetailConferenceTag"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:gravity="center_horizontal"
                             android:text="Tag"
                             android:textColor="@color/colorPrimary"
                             android:textSize="12sp"
-                            android:layout_margin="5dp"/>
+                            android:layout_margin="5dp"
+                            android:background="@drawable/shape_topico"
+                            android:layout_gravity="center"/>
                         <TextView
                             android:id="@+id/tvDetailConferenceDescription"
                             android:layout_width="match_parent"
