--- a/app/src/main/res/layout/fragment_speakers_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_speakers_detail_dialog.xml
@@ -42,7 +42,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="10dp">
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/shape_parrafo">
 
                         <ImageView
                             android:id="@+id/ivDetailSpeakerImage"
