--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -59,12 +59,13 @@
                 />
             <TextView
                 android:id="@+id/idItemScheduleTag"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tag"
                 android:ellipsize="end"
                 android:lines="1"
-                android:textColor="#FFFFFF"/>
+                android:textColor="#FFFFFF"
+                android:background="@drawable/shape_topico"/>
 
 
         </LinearLayout>
