--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,18 @@
     android:layout_height="match_parent"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
+<fragment
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:id="@+id/fragContent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@id/bnvMenu"
+    app:navGraph = "@navigation/nav_graph"
+    app:defaultNavHost = "true"/>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnvMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
