--- a/app/src/main/res/layout/fragment_ubication.xml
+++ b/app/src/main/res/layout/fragment_ubication.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".view.ui.fragments.UbicationFragment">
 
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+
 </FrameLayout>
