--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,18 @@
         <!-- Customize your theme here. --><!-- Status bar color. -->
 
     </style>
+<!--personalizamos nuestro estilo para el dialog -->
+    <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+    <item name="android:windowNoTitle">true</item>
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
+    <item name="android:windowFullscreen">false</item>
+    <item name="android:windowIsFloating">false</item>
+
+    <item name="android:windowBackground">#FFF</item>
+
+    <item name="android:windowEnterAnimation">@android:anim/slide_in_left</item>
+    <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+</style>
 </resources>
