hasta la clase de colocar estilos a mapas y con twitter funcionando

--- a/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
@@ -21,7 +21,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -51,7 +52,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/tvDetailConferenceHour"
+                            android:id="@+id/tvDetailUbicationNombreLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
@@ -71,6 +72,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_pin"/>
                             <TextView
+                                android:id="@+id/tvDetailUbicationDireccion"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="left"
@@ -84,8 +86,10 @@
                                 android:background="@color/colorPrimary"/>
 
                         </LinearLayout>
-
+<!--le damos un id a linear layout para poder darle un evento click-->
                         <LinearLayout
+
+                            android:id="@+id/llTelefonoLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -95,6 +99,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_phone"/>
                             <TextView
+                                android:id="@+id/tvDetailUbicationTelefono"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="left"
@@ -110,6 +115,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/llSitioweb"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -119,6 +125,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_link"/>
                             <TextView
+                                android:id="@+id/tvDetailUbicationWebsite"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="left"
