--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,11 +25,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:background="@drawable/shape_parrafo">
+                    android:background="@drawable/shape_parrafo"
+                    >
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/banner_platzi_conf"/>
+                        android:src="@drawable/banner_platzi_conf"
+                        android:layout_marginTop="1dp"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -57,7 +59,8 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginRight="@dimen/marginHomeSubtitulo"
                         android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
@@ -68,7 +71,10 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/cardCornerRadius"
                 app:cardElevation="1dp"
-                android:layout_margin="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -78,7 +84,9 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_2"/>
+                        android:src="@drawable/platzi_conf_2"
+                        android:scaleType="centerCrop"
+                        android:layout_marginTop="2dp"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -92,7 +100,8 @@
                         android:textColor="@color/colorPrimaryDark"
                         android:layout_marginRight="@dimen/marginHomeSubtitulo"
                         android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
+                        android:layout_marginBottom="10dp"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -106,7 +115,8 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginRight="@dimen/marginHomeSubtitulo"
                         android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
@@ -117,7 +127,9 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/cardCornerRadius"
                 app:cardElevation="1dp"
-                android:layout_margin="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -127,7 +139,9 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_3"/>
+                        android:src="@drawable/platzi_conf_3"
+                        android:scaleType="centerCrop"
+                        android:layout_marginTop="2dp"/>
                     <View
                         android:layout_marginTop="15dp"
                         android:layout_width="match_parent"
@@ -156,7 +170,8 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginRight="@dimen/marginHomeSubtitulo"
                         android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
