--- a/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
@@ -21,7 +21,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -66,13 +67,15 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="1dp">
+                    app:cardElevation="1dp"
+                    android:background="@drawable/shape_parrafo"
+                    android:padding="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:background="@drawable/shape_parrafo">
+                        >
 
                         <TextView
                             android:id="@+id/tvDetailConferenceHour"
