--- a/app/src/main/res/layout/fragment_speakers_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_speakers_detail_dialog.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-        >
+
    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -33,18 +33,22 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="1dp"
+                    app:cardElevation="10dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:layout_marginBottom="15dp">
+                    android:layout_marginBottom="15dp"
+                    android:paddingBottom="10dp"
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_marginBottom="10dp"
-                        android:background="@drawable/shape_parrafo">
+
+                        android:padding="10dp"
+                        >
 
                         <ImageView
                             android:id="@+id/ivDetailSpeakerImage"
