--- a/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
@@ -44,12 +44,14 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="1dp">
+                    app:cardElevation="1dp"
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:background="@drawable/shape_parrafo">
 
                         <TextView
                             android:id="@+id/tvDetailUbicationNombreLugar"
@@ -62,6 +64,10 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="30sp"
                             />
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/colorPrimary"/>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
